# opensource-analysis

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
docs/: about.html  index.html  search.json  styles.css
src/analysis/: age.py  exploratory.py  theme.py
